--- a/projekt/projekt/Views/Meals/Create.cshtml
+++ b/projekt/projekt/Views/Meals/Create.cshtml
@@ -5,35 +5,31 @@
     ViewData["Title"] = "Create";
     
 }
-<style>
-    .wlasciwosclisty {
-        width: 8%
-    }
-</style>
+
 
 
 	<div class="card">
 		<div class="card-header bg-success text-uppercase text-white text-center mb-2 pt-0" style="height:25px;">
         <h6>Utwórz danie</h6>
-		</div>	
-        
-        
-  <form id="CodeSbyAnizForm" asp-action="Create">
+		</div>
+
+
+    <form id="Create-Meal" asp-action="Create">
 
   
                  <div asp-validation-summary="ModelOnly" class="text-danger"></div>
 
-            
-                <label asp-for="NazwaDania" class="control-label"></label>            
-           
-                <input asp-for="NazwaDania" class="form-control" />
+
+        <label asp-for="NazwaDania" class="control-label">Nazwa Dania</label>
+
+        <input asp-for="NazwaDania" class="form-control" />
                  <span asp-validation-for="@Model.NazwaDania" class="text-danger"></span>
 
-                
-            
-          
 
-            		<div class="col-12 ml-5">
+
+
+
+        <div class="edit-table">
 					<table id="TabelaGlowna" class="table table-borderless table-sm mb-0 pb-0">
 						<thead>
 							<tr>
@@ -60,7 +56,7 @@
 								</th>							
                                   <th style="width:60px;">
                                         <button id='btnAddDetailRow' type="button" class="btn btn-sm btn-secondary visible" onclick="AddItem(this)">
-                                            Add
+                                Dodaj
                                         </button>
                                    </th>
 							</tr>
@@ -70,7 +66,7 @@
                         @for (int i = 0; i < Model.Produkty.Count(); i++)
                         {
                             <tr>
-                                <td style="width:30%;">
+                            <td style="width:20%!important">
 								    @*<input asp-for="@Model.PoDetails[i].ProductCode" class="form-control" />*@
                                     <select asp-for="@Model.Produkty[i].Nazwa" class="form-control" asp-items="ViewBag.ProduktyLista" onchange="FillValues(this);"></select>
                                 </td>
@@ -78,35 +74,34 @@
                                         <input asp-for="@Model.Ilosc[i]" class="form-control ilosc_class do_zmiany" onchange="Calculate(this)" />
                                         <span asp-validation-for="@Model.Ilosc[i]" class="text-danger"></span>
 									</td>
-                                    <td class ="wlasciwosclisty">
-										<input asp-for="@Model.Produkty[i].Kaloryczność" class="form-control" readonly/>
+                                    <td class="wlasciwosclisty">
+										<input asp-for="@Model.Produkty[i].Kaloryczność" class="form-control" readonly />
 										
 									</td>
-                                    <td class ="wlasciwosclisty">
-                                             <input asp-for="@Model.Produkty[i].Białko" class="form-control" readonly/>
-                                            
-                                     </td >
                                     <td class="wlasciwosclisty">
-										<input asp-for="@Model.Produkty[i].Tłuszcz" class="form-control" readonly/>
+                                             <input asp-for="@Model.Produkty[i].Białko" class="form-control" readonly />
+                                            
+                                     </td>
+                                    <td class="wlasciwosclisty">
+										<input asp-for="@Model.Produkty[i].Tłuszcz" class="form-control" readonly />
 										
-									</td >
-                                    <td class ="wlasciwosclisty">
-                                        <input asp-for="@Model.Produkty[i].Węglowodany" class="form-control" readonly/>
-                                    </td >
-                                    <td class ="wlasciwosclisty">
-										<input asp-for="@Model.Produkty[i].Błonnik" class="form-control" readonly/>	
+									</td>
+                                    <td class="wlasciwosclisty">
+                                        <input asp-for="@Model.Produkty[i].Węglowodany" class="form-control" readonly />
+                                    </td>
+                                    <td class="wlasciwosclisty">
+										<input asp-for="@Model.Produkty[i].Błonnik" class="form-control" readonly />	
                                         <input type="hidden" asp-for="@Model.Produkty[i].IsDeleted" />	
 									</td>
                                     <td style="width:60px;">
                                 <button id='btnremove-@i' type="button" class="btn btn-sm btn-danger visible" onclick="DeleteItem(this)">
-                                             Delete
+                                    Usuń
                                         </button>
                                         </td>
                                     </tr>                                
                         }
                         
-                                        <table class="table table-sm mb-0 pb-0 border">
-                                            <thead>
+                                        
                                                 <tr>
                                                     <th style="width:28%;">
                                                         Suma
@@ -138,11 +133,9 @@
 
                                 <th class="wlasciwosclisty">
                                                     </th>
-                                <th class="wlasciwosclisty"></th>
                                                 </tr>
 
-                                            </thead>
-                                        </table>
+                                           
                     </tbody>
 
 					</table>     
@@ -309,17 +302,16 @@
             var table;
             table = document.getElementById('TabelaGlowna');
             var rows = table.getElementsByTagName('tr');
-            var rowOuterHtml = rows[rows.length - 1].outerHTML;
+            var rowOuterHtml = rows[rows.length - 2].outerHTML;
 
-            var lastrowIdx = rows.length - 2;
-
+            var lastrowIdx = rows.length - 3;
             var nextrowIdx = eval(lastrowIdx) + 1;
 
             rowOuterHtml = rowOuterHtml.replaceAll('_' + lastrowIdx + '_', '_' + nextrowIdx + '_');
             rowOuterHtml = rowOuterHtml.replaceAll('[' + lastrowIdx + ']', '[' + nextrowIdx + ']');
             rowOuterHtml = rowOuterHtml.replaceAll('-' + lastrowIdx, '-' + nextrowIdx);
 
-            var newRow = table.insertRow();
+            var newRow = table.insertRow(nextrowIdx + 1);
             newRow.innerHTML = rowOuterHtml;
 
             var x = document.getElementsByTagName("INPUT");
