--- a/projekt/projekt/Views/Meals/Details.cshtml
+++ b/projekt/projekt/Views/Meals/Details.cshtml
@@ -1,15 +1,9 @@
 ﻿@model Tuple<IEnumerable<projekt.Models.Produkt>, List<decimal>, string>
 
-<h1>@Model.Item3</h1>
+
 
 <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.0/css/all.css"> @*tutaj sa styl css do ikonek*@
-<div class="btn-group">
-    <a asp-controller="Meals" asp-action="MyMeals">
-        <span class="btn btn-sm btn-outline-primary">
-            <i class="fa fa-arrow-left"></i>
-        </span>
-    </a>
-</div>
+
 
 
 
@@ -26,7 +20,15 @@
 
 }
     <div class="container">
-        <div class="left-div">
+    <div class="left-div">
+        <h1>@Model.Item3</h1>
+        <div class="btn-group" style="margin:1em 0">
+            <a asp-controller="Meals" asp-action="MyMeals">
+                <span class="btn btn-sm btn-outline-primary">
+                    <i class="fa fa-arrow-left"></i>
+                </span>
+            </a>
+        </div>
             <table class="table">
                 <thead>
                     <tr>                    
