--- a/projekt/projekt/Views/Meals/Edit.cshtml
+++ b/projekt/projekt/Views/Meals/Edit.cshtml
@@ -13,11 +13,11 @@
 
 <div class="card">
     <div class="card-header bg-success text-uppercase text-white text-center mb-2 pt-0" style="height:25px;">
-        <h6>Utwórz danie</h6>
+        <h6>Edytuj danie</h6>
     </div>
 
 
-    <form asp-action="Create">
+    <form id="Edit-Meal" asp-action="Create">
 
 
         <div asp-validation-summary="ModelOnly" class="text-danger"></div>
@@ -30,13 +30,12 @@
         <input type="hidden" class="form-control" asp-for="Id">
 
 
-
-        <div class="col-12 ml-5">
+        <div class="edit-table">
             <table id="TabelaGlowna" class="table table-borderless table-sm mb-0 pb-0">
                 <thead>
                     <tr>
                         <th>
-                            Nazwa
+                            Nazwa Produktu
                         </th>
                         <th>
                             Ilość[g/ml]
@@ -58,7 +57,7 @@
                         </th>
                         <th style="width:60px;">
                             <button id='btnAddDetailRow' type="button" class="btn btn-sm btn-secondary visible" onclick="AddItem(this)">
-                                Add
+                                Dodaj
                             </button>
                         </th>
                     </tr>
@@ -70,10 +69,11 @@
                         <tr>
                             <td style="width:30%;">
                                 @*<input asp-for="@Model.PoDetails[i].ProductCode" class="form-control" />*@
-                                <select asp-for="@Model.Produkty[i].Nazwa"  data-wartosc="@Model.Produkty[i].Id" class="form-control" asp-items="ViewBag.ProduktyLista" onchange="FillValues(this);"></select>
+                                <select asp-for="@Model.Produkty[i].Nazwa" data-wartosc="@Model.Produkty[i].Id" class="form-control" asp-items="ViewBag.ProduktyLista" onchange="FillValues(this)"></select>
                             </td>
                             <td class="wlasciwosclisty">
                                 <input asp-for="@Model.Ilosc[i]" class="form-control ilosc_class do_zmiany" onchange="Calculate(this)" />
+                                @*<input asp-for="@Model.Ilosc[i]" class="form-control ilosc_class do_zmiany" onchange="FillValues(this)" />*@
                                 <span asp-validation-for="@Model.Ilosc[i]" class="text-danger"></span>
                             </td>
                             <td class="wlasciwosclisty">
@@ -97,7 +97,7 @@
                             </td>
                             <td style="width:60px;">
                                 <button id='btnremove-@i' type="button" class="btn btn-sm btn-danger visible" onclick="DeleteItem(this)">
-                                    Delete
+                                    Usuń
                                 </button>
                             </td>
                         </tr>
@@ -135,17 +135,9 @@
                                 <th class="wlasciwosclisty">
                                 </th>
                                 <th class="wlasciwosclisty"></th>
-                            </tr>              
+                    </tr>
+                </tbody>
             </table>
-            <div>
-                <div class="form-group col-12">
-                </div>
-
-                <div class="form-group col-12">
-                </div>
-            </div>
-
-
 
         </div>
 
@@ -160,7 +152,7 @@
             </div>
             <div class="col-5">
                 <a class="btn btn-secondary btn-block" asp-action="MyMeals"
-                   asp-route-pg="@TempData.Peek("CurrentPage")">Back</a>
+                   asp-route-pg="@TempData.Peek("CurrentPage")">Anuluj</a>
             </div>
             <div class="col-1"></div>
         </div>
@@ -329,9 +321,9 @@
             var table;
             table = document.getElementById('TabelaGlowna');
             var rows = table.getElementsByTagName('tr');
-            var rowOuterHtml = rows[rows.length - 1].outerHTML;
+            var rowOuterHtml = rows[rows.length - 2].outerHTML;
 
-            var lastrowIdx = rows.length - 2;
+            var lastrowIdx = rows.length - 3;
 
             var nextrowIdx = eval(lastrowIdx) + 1;
 
@@ -339,7 +331,7 @@
             rowOuterHtml = rowOuterHtml.replaceAll('[' + lastrowIdx + ']', '[' + nextrowIdx + ']');
             rowOuterHtml = rowOuterHtml.replaceAll('-' + lastrowIdx, '-' + nextrowIdx);
 
-            var newRow = table.insertRow();
+            var newRow = table.insertRow(nextrowIdx + 1);
             newRow.innerHTML = rowOuterHtml;
 
             var x = document.getElementsByTagName("INPUT");
