--- a/projekt/projekt/Views/Account/Login.cshtml
+++ b/projekt/projekt/Views/Account/Login.cshtml
@@ -2,16 +2,17 @@
     ViewBag.Title = "Login";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
-<div>
-    <h1>Login</h1>
+<div id="login">
+    
     <div class="login-form">
+        <h1>Login</h1>
         <form action="Verify" method="post">
             <div class="pole-login">
                 <label>Nazwa użytkownika:</label>
                 <input type="text" name="Nazwa" placeholder="wpisz nazwę użytkownika" required="" />
             </div>
             <div class="pole-login">
-                <label>hasło</label>
+                <label>Hasło:</label>
                 <input type="password" name="Haslo" placeholder="Wpisz hasło" required="" id="passwd" />
             </div>
             <div class="label">
@@ -29,10 +30,12 @@
                     }
                 }
             </script>
+            <div class="login-button">
             <input type="submit" value="Zaloguj" />
-            <a class="nav-link text-dark" asp-area="" asp-controller="Account" asp-action="Register">
+            <a asp-area="" asp-controller="Account" asp-action="Register">
                 <input type="button" value="Zarejestruj się" />
-            </a>
+                </a>
+            </div>
             @{
                 if (TempData["success"] != null)
                 {
